--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
                                     <button
                                         onClick={(e) => openEditModal(e, cat)}
-                                        className="absolute top-2 right-2 p-1.5 text-text-light hover:text-main bg-white/80 rounded-full shadow-sm opacity-0 group-hover:opacity-100 transition-opacity"
+                                        className="absolute top-2 right-2 p-1.5 text-text-light/50 hover:text-main bg-white/40 hover:bg-white rounded-full shadow-sm transition-all"
                                     >
                                         <IconPencil className="w-4 h-4" />
                                     </button>
